<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/material_blue_grey_950"
    android:id="@+id/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_test_your"
        android:id="@+id/text_test_your"
        android:textColor="#ff9f00"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_speed"
        android:id="@+id/text_speed"
        android:textColor="#1a8aff"
        android:textSize="48sp"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/text_test_your"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_reflexes"
        android:id="@+id/button_reflexes"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/text_speed"
        android:layout_alignStart="@+id/text_speed"
        android:onClick="onclickReflexStart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_buzzers"
        android:id="@+id/button_buzzers"
        android:layout_below="@+id/button_reflexes"
        android:layout_alignEnd="@+id/button_reflexes"
        android:layout_alignStart="@+id/button_reflexes"
        android:onClick="onclickBuzzerStart" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_statistics"
        android:id="@+id/button_statistics"
        android:layout_below="@+id/button_buzzers"
        android:layout_alignEnd="@+id/button_buzzers"
        android:layout_alignStart="@+id/button_buzzers"
        android:onClick="onclickStatsStart" />

</RelativeLayout>
