<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vamaraju.vamaraju_reflex.Buzzer4PlayerActivity"
    android:background="@color/material_blue_grey_950"
    android:id="@+id/activity_buzzer_4player">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="175dp"
            android:layout_height="240dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/buzzer4Player_player1"
            android:id="@+id/button_4player_player1_buzzer"
            android:onClick="onclickPlayer1Buzzer" />

        <Button
            android:layout_width="175dp"
            android:layout_height="240dp"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/buzzer4Player_player2"
            android:id="@+id/button_4player_player2_buzzer"
            android:onClick="onclickPlayer2Buzzer" />

        <Button
            android:layout_width="175dp"
            android:layout_height="240dp"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/buzzer4Player_player3"
            android:id="@+id/button_4player_player3_buzzer"
            android:onClick="onclickPlayer3Buzzer" />

        <Button
            android:layout_width="175dp"
            android:layout_height="240dp"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/buzzer4Player_player4"
            android:id="@+id/button_4player_player4_buzzer"
            android:onClick="onclickPlayer4Buzzer" />
    </GridLayout>
</RelativeLayout>

