<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vamaraju.vamaraju_reflex.BuzzerStartActivity"
    android:background="@color/material_blue_grey_950"
    android:id="@+id/activity_buzzer_start">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buzzerStart_2player"
        android:id="@+id/button_2player_buzzer_game"
        android:visibility="visible"
        android:onClick="onclick2PlayerBuzzerStart"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="184dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buzzerStart_3player"
        android:id="@+id/button_3player_buzzer_game"
        android:visibility="visible"
        android:onClick="onclick3PlayerBuzzerStart"
        android:layout_below="@+id/button_2player_buzzer_game"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button_2player_buzzer_game" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buzzerStart_4player"
        android:id="@+id/button_4player_buzzer_game"
        android:visibility="visible"
        android:onClick="onclick4PlayerBuzzerStart"
        android:layout_below="@+id/button_3player_buzzer_game"
        android:layout_alignEnd="@+id/button_3player_buzzer_game"
        android:layout_alignParentStart="true" />

</RelativeLayout>
