<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vamaraju.vamaraju_reflex.Buzzer3PlayerActivity"
    android:background="@color/material_blue_grey_950"
    android:id="@+id/activity_buzzer_3player">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:id="@+id/layout_linear_3player_buzzers"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buzzer3Player_player1"
            android:id="@+id/button_3player_player1_buzzer"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.33"
            android:onClick="onclickPlayer1Buzzer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buzzer3Player_player2"
            android:id="@+id/button_3player_player2_buzzer"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.33"
            android:onClick="onclickPlayer2Buzzer" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buzzer3Player_player3"
            android:id="@+id/button_3player_player3_buzzer"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.33"
            android:onClick="onclickPlayer3Buzzer" />

    </LinearLayout>
</RelativeLayout>

